@@ -4,19 +4,44 @@ import epi.test_framework.GenericTest;
 import epi.test_framework.TestFailure;
 import epi.test_framework.TimedExecutor;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Deque;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
+
 public class Hanoi {
 
   private static final int NUM_PEGS = 3;
 
   public static List<List<Integer>> computeTowerHanoi(int numRings) {
-    // TODO - you fill in here.
-    return Collections.emptyList();
+    Deque<TrInfo> st = new ArrayDeque<>();
+    List<List<Integer>> ans = new ArrayList<>();
+    st.addLast(new TrInfo(numRings, 0, 2, 1));
+    while (!st.isEmpty()) {
+      TrInfo cur = st.removeLast();
+      if (cur.numR == 1) {
+        ans.add(List.of(cur.sP, cur.dP));
+      } else {
+        st.addLast(new TrInfo(cur.numR - 1, cur.iP, cur.sP, cur.dP));
+        st.addLast(new TrInfo(1, cur.sP, cur.iP, cur.dP));
+        st.addLast(new TrInfo(cur.numR - 1, cur.sP, cur.dP, cur.iP));
+      }
+    }
+    return ans;
   }
+
+
+  private static class TrInfo {
+    int numR;
+    int sP;
+    int iP;
+    int dP;
+
+    public TrInfo(int numR, int sP, int iP, int dP) {
+      this.numR = numR;
+      this.sP = sP;
+      this.iP = iP;
+      this.dP = dP;
+    }
+  }
+
   @EpiTest(testDataFile = "hanoi.tsv")
   public static void computeTowerHanoiWrapper(TimedExecutor executor,
                                               int numRings) throws Exception {
